--- a/drupsible-project/ansible/playbooks/config-no-core.yml
+++ b/drupsible-project/ansible/playbooks/config-no-core.yml
@@ -195,7 +195,7 @@
     when: app_target == 'local'
   - role: drupsible.twigc
     tags: [ twigc, twigc-deploy ]
-    when: app_drupal_version|version_compare('8', '==') and ansible_distribution_release != 'xenial'
+    when: app_drupal_version|default('8')|version_compare('8', '==') and ansible_distribution_release != 'xenial'
     twigc_composer_working_dir: "/home/{{ app_user }}/{{ app_name }}"
   - role: debops.ferm
     tags: [ ferm, ferm-deploy, postfix, apache2, samba, deployment ]
@@ -204,7 +204,7 @@
     when: not app_in_cloud|bool
   - role: drupsible.blackfire
     tags: [ blackfire, blackfire-deploy ] 
-    when: deploy_blackfire_enabled|bool|default(False)
+    when: deploy_blackfire_enabled|default(False)|bool
 
 - name: Varnish inventory group
   hosts: [ '{{ app_name }}-{{ app_target }}_varnish' ]
